[package]
name = "che"
version = "0.1.0"
authors = ["gasweld <gasweld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
substring = "1.4"
md5 = "0.7.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
